--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "@strapi/plugin-i18n": "^4.25.22",
     "@turf/turf": "^7.2.0",
+    "mapbox-gl": "^2.15.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
@@ -25,12 +27,15 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-typescript": "^14.5.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-oxlint": "~1.1.0",
     "eslint-plugin-vue": "~10.2.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.0",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-vue-devtools": "^7.7.7",
